--- a/businessTransfers/src/app/process/process.component.css
+++ b/businessTransfers/src/app/process/process.component.css
@@ -20,7 +20,7 @@
 }
 
 .blurred-bg-1{
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.3));
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8));
   background-repeat:no-repeat;
 	@include background-size(cover);
 	background-attachment: fixed;
